<resources>
    <string name="app_name">NMedia!</string>
    <string name="Netology">Netology. University of internet-professions</string>
    <string name="Data">On May 21 at 18:36</string>
    <string name="NetologyText">
        Hello, this is a new Netology!
        Once upon a time, Netology began with intensive courses in online marketing.
        Then there were courses in design, development, analytics and management.
        We grow by ourselves and help students grow: from beginners to confident professionals.
        But the most important thing remains with us: we believe that everyone has the power to want more, aim higher, and run faster.
        Our mission is to help us embark on the path of growth and start a chain of changes -> "https://netolo.gy/fyb"</string>
    <string name="FiveHundred">500</string>
    <string name="ten">10</string>
    <string name="menuButton">Menu button</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_save">Save</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">The field cannot be empty</string>
    <string name="cancel_editing">Cancel editing</string>
    <string name="chooser_share_post">Share Post</string>
    <string name="edit_post_text">Edit Post</string>
    <string name="play_video">Play video</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
</resources>